app-test/testdata/typesystem/neg/pattern-matching-alternative-expression-type/src/patmat.cal
namespace patmat:
    int a;
    actor AlternativeExpressionType() ==> int OUT:
        do
            OUT <--
                case a of
                    1 : true end // error
                else
                    0
                end;
        end
    end
end